--- a/Accepted/Base.lproj/LaunchScreen.xib
+++ b/Accepted/Base.lproj/LaunchScreen.xib
@@ -16,8 +16,8 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="XMn-zh-7fH">
-                    <rect key="frame" x="8" y="8" width="359" height="651"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="Z47-4e-34t">
+                    <rect key="frame" x="8" y="8" width="359" height="610"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.7211761445" green="0.88450633280000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,6 +32,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Launch Screen" width="3000" height="2400"/>
+        <image name="Launch Screen" width="463" height="370"/>
     </resources>
 </document>
